# migrate-to-astro

./: .gitignore  Makefile  README.md  airflow-connections.yaml  airflow_settings.yaml  migrate-variables.py
.astro/: config.yaml
dags/: history_migration_dag.py
dags/airflow_migration_dag/: .gitignore  Dockerfile  README.md
dags/airflow_migration_dag/.astro/: config.yaml
dags/airflow_migration_dag/dags/: airflow-migration.py  migration-dag-slim.py
dags/conn_migration/: Dockerfile  README.md
dags/conn_migration/.astro/: config.yaml
dags/conn_migration/dags/: conn_migration_dag.py
dags/v1_10to2x/: migrate_conn.py  migrate_var.py
dags/v1_10to2x_gsm/: migrate_conn.py  migrate_var.py
scripts/: migrate-connections.py  migrate-pools.py
scripts/util/: astro.py  nebula.py
standalone/airflow_v2_upgrader-main/: .gitignore  Dockerfile  README.md  airflow_v2_upgrader.py  requirements.txt
standalone/astro-apply/: Makefile  README.md  pyproject.toml
standalone/astro-apply/astro_apply/: __init__.py  __main__.py  client.py  constants.py
standalone/astro-apply/resources/: slowtest.sh
standalone/astro-apply/tests/: conftest.py
standalone/astro-apply/tests/astro-apply/: test___main__.py  test_client.py
standalone/chris_hronek/scripts/: init-connections.py  migrate-connections.py  migrate-variables.py
standalone/chris_hronek/scripts/util/: nebula.py
standalone/dagutil/: README.md  dagstate.py  getdaglist.py  init-connections.py
standalone/dagutil/input/: daglist.txt
standalone/dagutil/output/: output_dagdetails.csv  temp.json
standalone/dagutil/util/: astro.py  software.py
standalone/migrate-to-astro/: Makefile  README.md
standalone/migrate-to-astro/scripts/: check-providers.py
standalone/migrate-to-astro/scripts/util/: astro.py
